--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,6 +15,13 @@
     margin-right: auto;
     width: 50%;
   }
-  .border-white {
+  .border-full {
     border: 10px solid white;
+  }
+  .border-top {
+    border-top:10px solid white;
+    border-right:10px solid white;
+    border-left:10px solid white
+
+
   }
